<resources>
    <string name="app_name">p081</string>
    <string name="todo">TODO</string>
    <string name="user_profile">User Profile</string>
    <string name="account_information">Account Information:</string>
    <string name="name">Name :</string>
    <string name="save">Save</string>
    <string name="country">Country :</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="monaco">Monaco</string>
    <string name="oman">Oman</string>
    <string name="india">India</string>
    <string name="laos">Laos</string>
    <string name="uruguay">Uruguay</string>
    <string name="ukraine">Ukraine</string>
    <string name="usa">USA</string>
    <string name="button">Button</string>
</resources>